--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/shoekstr/ComicsApi#readme",
   "dependencies": {
-    "form-data": "^2.3.3"
+    "form-data": "^2.3.3",
+    "formidable": "^1.2.1",
+    "multer": "^1.4.1"
   }
 }
